[231205] CBT: 디자인 수정

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -583,7 +583,7 @@
 		"community": "FA{comments}",
 		"communityText": "친구",
 		"bulletin": "FA{bullhorn}&nbsp;알립니다",
-		"leaderboard": "FA{trophy}&nbsp;랭킹",
+		"leaderboard": "FA{trophy}랭킹",
 		"nickname": "이름",
 		"spectate": "관전하기",
 		"mute": "음소거",
@@ -612,16 +612,16 @@
 		"friendAddNotice": "친구 추가 요청을 보낼 사용자의 식별 번호를 입력하세요.\n식별 번호는 명령어 /id를 이용하여 구할 수 있습니다.",
 		"friendAdd": "친구 추가",
 		"friendSureRemove": "이 친구를 정말 삭제합니까? 삭제하는 경우 상대방의 친구 목록에서도 회원님이 빠지게 됩니다.",
-		"newRoom": "방 만들기",
+		"newRoom": "FA{plus}방 만들기",
 		"setRoom": "방 설정",
-		"quickRoom": "빠른 입장",
+		"quickRoom": "FA{bolt}빠른 입장",
 		"quickStatus": "해당 유형의 방 수:",
 		"quickQueue": "방 찾는 중...",
 		"exit": "나가기",
 		"ready": "준비",
 		"practice": "연습",
 		"start": "시작",
-		"shop": "상점",
+		"shop": "FA{shop}상점",
 		"invite": "초대",
 		"inviteRobot": "AI 초대",
 		"dict": "사전",
@@ -656,7 +656,7 @@
 		"okgCurrent": "현재 오끄감 버프 중첩 (최대 18): ",
 		"okgExpired": "자정이 지나 오끄감 버프 중첩이 초기화되었습니다.",
 		
-		"replay": "리플레이",
+		"replay": "FA{video}리플레이",
 		"replayDate": "기록 날짜",
 		"replayPlayers": "참가자",
 		"replayView": "보기",
