--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -578,14 +578,14 @@
 		"send": "전송",
 		"help": "FA{question-circle}",
 		"helpText": "도움말",
-		"settings": "FA{wrench}",
+		"settings": "FA{gear}",
 		"settingsText": "환경 설정",
 		"community": "FA{comments}",
 		"communityText": "친구",
 		"bulletin": "FA{bullhorn}&nbsp;알립니다",
 		"leaderboard": "FA{trophy}랭킹",
 		"nickname": "이름",
-		"spectate": "관전하기",
+		"spectate": "FA{eye}관전하기",
 		"mute": "음소거",
 		"bgm": "배경 음악",
 		"effect": "효과음",
@@ -612,19 +612,21 @@
 		"friendAddNotice": "친구 추가 요청을 보낼 사용자의 식별 번호를 입력하세요.\n식별 번호는 명령어 /id를 이용하여 구할 수 있습니다.",
 		"friendAdd": "친구 추가",
 		"friendSureRemove": "이 친구를 정말 삭제합니까? 삭제하는 경우 상대방의 친구 목록에서도 회원님이 빠지게 됩니다.",
-		"newRoom": "FA{plus}방 만들기",
-		"setRoom": "방 설정",
+		"newRoom": "방 만들기",
+		"newRoomTitle": "FA{plus}방 만들기",
+		"setRoom": "FA{wrench}방 설정",
+		"setRoom_noicon": "방 설정",
 		"quickRoom": "FA{bolt}빠른 입장",
 		"quickStatus": "해당 유형의 방 수:",
 		"quickQueue": "방 찾는 중...",
-		"exit": "나가기",
-		"ready": "준비",
-		"practice": "연습",
-		"start": "시작",
+		"exit": "FA{door-open}나가기",
+		"ready": "FA{play}준비",
+		"practice": "FA{pencil}연습",
+		"start": "FA{play}시작",
 		"shop": "FA{shop}상점",
-		"invite": "초대",
+		"invite": "FA{user-plus}초대",
 		"inviteRobot": "AI 초대",
-		"dict": "사전",
+		"dict": "FA{book}사전",
 		"wordPlus": "단어 추가",
 		"chatLog": "대화 기록",
 		"notice": "알림",
