--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -121,7 +121,7 @@
 		"withLine": "라인 아이디로 로그인",
 		"withInstagram": "인스타그램 아이디로 로그인",
 		"withSpotify": "Spotify 아이디로 로그인",
-		"login_kkutu": "글자로 놀자! 끄투 온라인을 이용하시려면 로그인을 해 주세요."
+		"login_kkutu": "두근두근 플러스끄투을 이용하시려면 로그인을 해 주세요."
 	},
 	"loginfail": {
 		"title": "로그인 실패",
@@ -129,7 +129,7 @@
 		"login": "로그인"
 	},
 	"kkutu": {
-		"title": "글자로 놀자! 끄투 온라인",
+		"title": "두근두근 플러스끄투",
 		"version": "2.5.1",
 		
 		"meta_desc": "온라인 끝말잇기, 앞말잇기, 자음퀴즈, 십자말풀이, 타자 대결까지! 끄투에서 어휘력의 제왕이 되어 보세요.",
