타 끄투 프리서버 언급 제한 및 관리페이지 개선

--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -381,6 +381,11 @@
 		"theme_KMV": "한국 영화",
 		"theme_HDC": "함대 컬렉션",
 		"theme_HOS": "히어로즈 오브 더 스톰",
+		"theme_KRT": "크레이지레이싱 카트라이더",
+		"theme_KKU": "끄투 프리서버",
+		"theme_BUS": "버스 정류소",
+		"theme_BRN": "브랜드",
+		"theme_PSK": "프로젝트 세카이 컬러풀 스테이지! feat. 하츠네 미쿠",
 
 		"class_1": "명",
 		"class_2": "대명",
