--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -394,6 +394,11 @@
 		"theme_KMV": "한국 영화",
 		"theme_HDC": "함대 컬렉션",
 		"theme_HOS": "히어로즈 오브 더 스톰",
+		"theme_KRT": "크레이지레이싱 카트라이더",
+		"theme_KKU": "끄투 프리서버",
+		"theme_BUS": "버스 정류소",
+		"theme_BRN": "브랜드",
+		"theme_PSK": "프로젝트 세카이 컬러풀 스테이지! feat. 하츠네 미쿠",
 		
 		"class_1": "명",
 		"class_2": "대명",
@@ -626,7 +631,7 @@
 		"shop": "FA{shop}상점",
 		"invite": "FA{user-plus}초대",
 		"inviteRobot": "AI 초대",
-		"dict": "FA{book}사전",
+		"dict": "FA{book}단어 등록",
 		"wordPlus": "단어 추가",
 		"chatLog": "대화 기록",
 		"notice": "알림",
