메인페이지 수정 및 코인샵 바로가기 추가, 해상도패치 버그픽스, 블랙리스트 개선

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -632,6 +632,7 @@
 		"invite": "FA{user-plus}초대",
 		"inviteRobot": "AI 초대",
 		"dict": "FA{book}단어 등록",
+		"cafe": "FA{mug-hot}",
 		"wordPlus": "단어 추가",
 		"chatLog": "대화 기록",
 		"notice": "알림",
