--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -107,20 +107,21 @@
 	},
 	"login": {
 		"title": "로그인",
-		"loginWith": "로그인 방법을 선택하세요.",
-		"withDaldalso": "달달소 아이디로 로그인",
-		"withNaver": "네이버 아이디로 로그인",
+		"loginWith": "아래 로그인 수단 중 하나로 계속하세요",
+		"withDaldalso": "달달소로 로그인",
+		"withNaver": "치지직으로 로그인",
 		"withFacebook": "페이스북 아이디로 로그인",
-		"withGoogle": "구글 아이디로 로그인",
-		"withTwitter": "트위터 아이디로 로그인",
-		"withKakao": "카카오 아이디로 로그인",
-		"withDiscord": "디스코드 아이디로 로그인",
+		"withGoogle": "Google으로 로그인",
+		"withTwitter": "X로 로그인",
+		"withKakao": "카카오로 로그인",
+		"withDiscord": "Discord로 로그인",
 		"withTwitch": "트위치 아이디로 로그인",
 		"withGithub": "깃허브 아이디로 로그인",
 		"withLine": "라인 아이디로 로그인",
 		"withInstagram": "인스타그램 아이디로 로그인",
 		"withSpotify": "Spotify 아이디로 로그인",
-		"login_kkutu": "두근두근 플러스끄투을 이용하시려면 로그인을 해 주세요."
+		"login_kkutu": "끄투를 이용하시려면 로그인을 해 주세요.",
+		"loginLegal": "로그인하면 Plus ID와 계정을 연계하게 됩니다."
 	},
 	"loginfail": {
 		"title": "로그인 실패",
@@ -296,8 +297,8 @@
 		"modex11": "주어진 주제에 맞는 영어 어휘를 댑니다.",
 		"modex12": "무작위로 섞인 글자들 속에서 한국어 단어를 솎아 냅니다.",
 		"modex13": "무작위로 섞인 글자들 속에서 영어 단어를 솎아 냅니다.",
-		"modex14": "한글로 된 2자 ~ 10자의 단어를 그림으로 설명하고 맞춥니다. <b>경고: 모바일은 정상플레이 불가</b>",
-		"modex15": "영어로 된 4자 ~ 16자의 단어를 그림으로 설명하고 맞춥니다. <b>경고: 모바일은 정상플레이 불가</b>",
+		"modex14": "<b>테스트중인 모드로, 정상 이용이 불가합니다.</b> 한글로 된 2자 ~ 10자의 단어를 그림으로 설명하고 맞춥니다. <b>경고: 모바일은 정상플레이 불가</b>",
+		"modex15": "<b>테스트중인 모드로, 정상 이용이 불가합니다.</b> 영어로 된 4자 ~ 16자의 단어를 그림으로 설명하고 맞춥니다. <b>경고: 모바일은 정상플레이 불가</b>",
 		"numRound": "라운드 수",
 		"roundTime": "라운드 시간",
 		"players": "참여자",
@@ -393,11 +394,13 @@
 		"theme_ELW": "엘소드",
 		"theme_OIM": "오레이모",
 		"theme_OVW": "오버워치",
-		"theme_NEX": "온라인 게임",
+		"theme_NEX": "비디오 게임",
+		"theme_MUS": "음악",
 		"theme_WMV": "외국 영화",
 		"theme_WOW": "월드 오브 워크래프트",
 		"theme_YRY": "유루유리",
 		"theme_KPO": "유명인",
+		"theme_BLU": "블루 아카이브",
 		"theme_JLN": "라이트 노벨",
 		"theme_JAN": "만화/애니메이션",
 		"theme_ZEL": "젤다의 전설",
@@ -412,6 +415,8 @@
 		"theme_BUS": "버스 정류소",
 		"theme_BRN": "브랜드",
 		"theme_PSK": "프로젝트 세카이 컬러풀 스테이지! feat. 하츠네 미쿠",
+		"theme_SVL": "사운드 볼텍스",
+		"theme_WAK": "왁타버스",
 		
 		"class_1": "명",
 		"class_2": "대명",
