신규 Dialog 및 크리스마스 BGM

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -559,7 +559,7 @@
 		"obtainMoney": "핑을 획득했습니다",
 		"sureConsume": "정말 이 항목을 사용합니까?",
 		
-		"dress": "프로필 관리",
+		"dress": "FA{shirt}꾸미기",
 		"myExordial": "소개 한마디",
 		"myExordialX": "100글자 이내",
 		"myMoremi": "내 모레미",
