GCP에 로깅 및 일부 심의사항 수정

--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -398,7 +398,8 @@
 		"theme_KKU": "끄투 프리서버",
 		"theme_BUS": "버스 정류소",
 		"theme_BRN": "브랜드",
-		"theme_PSK": "프로젝트 세카이 컬러풀 스테이지! feat. 하츠네 미쿠",
+		"theme_PSK": "프로세카",
+		"theme_AIR": "항공",
 
 		"class_1": "명",
 		"class_2": "대명",
