--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -1,6 +1,6 @@
 {
 	"GLOBAL": {
-		"GPL": "<div style='color: #666;'>두근두근 플러스끄투 Copyright (C) 2021~ Plus Platforms (support@pcor.me)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/10kwon/KKuTu'>확인하기</a></div>",
+		"GPL": "<div style='color: #666;'>두근두근 플러스끄투 Copyright (C) 2021~ Plus Platforms (moremi@pcor.me)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/10kwon/KKuTu'>확인하기</a></div>",
 
 		"CREATOR":	"개발자 블로그",
 		"HOME":		"FA{home}",
@@ -386,6 +386,9 @@
 		"theme_MKK": "메카쿠시티 액터즈",
 		"theme_MNG": "모노가타리 시리즈",
 		"theme_MOB": "모바일 게임",
+		"theme_MOM": "모두의 마블",
+		"theme_MIN": "마인크래프트",
+		"theme_BRL": "브롤스타즈",
 		"theme_HYK": "빙과",
 		"theme_CYP": "사이퍼즈",
 		"theme_HRH": "스즈미야 하루히",
@@ -394,14 +397,20 @@
 		"theme_KGR": "아지랑이 프로젝트",
 		"theme_ESB": "앙상블 스타즈!",
 		"theme_ELW": "엘소드",
+		"theme_LOA": "로스트아크",
 		"theme_OIM": "오레이모",
 		"theme_OVW": "오버워치",
+		"theme_GEN": "원신",
 		"theme_NEX": "비디오 게임",
+		"theme_MSI": "뮤지컬",
+		"theme_APP": "휴대폰 앱",
+		"theme_BRD": "보드게임",
 		"theme_MUS": "음악",
 		"theme_WMV": "외국 영화",
 		"theme_WOW": "월드 오브 워크래프트",
 		"theme_YRY": "유루유리",
 		"theme_KPO": "유명인",
+		"theme_YHW": "유희왕",
 		"theme_BLU": "블루 아카이브",
 		"theme_JLN": "라이트 노벨",
 		"theme_JAN": "만화/애니메이션",
@@ -409,16 +418,21 @@
 		"theme_POK": "포켓몬스터",
 		"theme_HAI": "하이큐!!",
 		"theme_HSS": "하스스톤",
-		"theme_KMV": "한국 영화",
+		"theme_KMV": "영화 및 OTT",
 		"theme_HDC": "함대 컬렉션",
 		"theme_HOS": "히어로즈 오브 더 스톰",
-		"theme_KRT": "크레이지레이싱 카트라이더",
+		"theme_KRT": "카트라이더",
+		"theme_COC": "클로/클오클",
 		"theme_KKU": "끄투 프리서버",
 		"theme_BUS": "버스 정류소",
 		"theme_BRN": "브랜드",
-		"theme_PSK": "프로젝트 세카이 컬러풀 스테이지! feat. 하츠네 미쿠",
+		"theme_PSK": "프로세카",
 		"theme_SVL": "사운드 볼텍스",
 		"theme_WAK": "왁타버스",
+		"theme_AIR": "항공",
+		"theme_CKR": "쿠키런",
+		"theme_DBP": "동방 프로젝트",
+		"theme_PKM": "포켓몬스터",
 		
 		"class_1": "명",
 		"class_2": "대명",
