네오프론트

--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -583,7 +583,7 @@
 		"myId": "내 식별 번호: ",
 		"send": "전송",
 		"help": "FA{question-circle}",
-		"helpText": "도움말",
+		"helpText": "고객센터",
 		"settings": "FA{wrench}",
 		"settingsText": "환경 설정",
 		"community": "FA{comments}",
