주제 업데이트

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -406,6 +406,8 @@
 		"theme_MSI": "뮤지컬",
 		"theme_APP": "휴대폰 앱",
 		"theme_BRD": "보드게임",
+		"theme_VAL": "발로란트",
+		"theme_SNA": "세븐나이츠",
 		"theme_MUS": "음악",
 		"theme_WMV": "외국 영화",
 		"theme_WOW": "월드 오브 워크래프트",
