--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -60,8 +60,8 @@
 		"TOTAL": "총",
 		"QUICK_HOLDER": "빠른 소환사 검색",
 		"QUICK_BTN": "FA{search}",
-		"LOGIN": "로그인",
-		"ASK_LOGOUT": "로그아웃 합니까?",
+		"LOGIN": "<i class='fa-solid fa-right-to-bracket'></i> 로그인",
+		"ASK_LOGOUT": "로그아웃 할까요?",
 		"AS_PC": "PC 버전",
 		"AS_MOBILE": "모바일 버전",
 		"AGREEMENT": "서비스 이용 약관",
@@ -165,9 +165,9 @@
 		"dictionarySupport": "사전 정보 제공:<a href='http://wordnet.princeton.edu' target='_blank'>WordNet</a><br><label style='color: #777777;'>WordNet 3.0 Copyright 2006 by Princeton University. All rights reserved.</label>",
 		"sandbox": "샌드박스 :: SDBX",
 		"etcSupport": "도움:<a href='http://cafe.naver.com/sdbx' target='_blank'>샌드박스 :: SDBX</a>",
-		"welcome": "[ESC] 건너뛰기",
+		"welcome": "아무 키나 눌러 시작하세요",
 		"welcomeTestServer": "테스트 서버에 접속했습니다. 본 서버는 특별한 공지 없이 폭발하거나 닫힐 수 있습니다.",
-		"loadRemain": "남은 에셋: ",
+		"loadRemain": "불러오는 중... 앞으로 ",
 		"closed": "서버와의 연결이 종료되었습니다.",
 		"error": "연결 중 문제가 발생했습니다!",
 		"error_full": "서버 제한 인원을 초과했습니다... 잠시 후 접속해 주세요!!!",
