--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -1,6 +1,6 @@
 {
 	"GLOBAL": {
-		"GPL": "<div style='color: #666;'>두근두근 플러스끄투 Copyright (C) 2021~ Plus Platforms (moremi@pcor.me)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/10kwon/KKuTu'>확인하기</a></div>",
+		"GPL": "<div style='color: #666;'>두근두근 플러스끄투 Copyright (C) 2021~ Infole (support@kkutu.cc)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/10kwon/KKuTu'>확인하기</a></div>",
 
 		"CREATOR":	"개발자 블로그",
 		"HOME":		"FA{home}",
@@ -121,7 +121,7 @@
 		"withInstagram": "인스타그램 아이디로 로그인",
 		"withSpotify": "Spotify 아이디로 로그인",
 		"login_kkutu": "끄투를 이용하시려면 로그인을 해 주세요.",
-		"loginLegal": "로그인하면 Plus ID와 계정을 연계하게 됩니다."
+		"loginLegal": "로그인하면 플러스끄투와 계정을 연계하게 됩니다."
 	},
 	"loginfail": {
 		"title": "로그인 실패",
