--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -361,7 +361,7 @@
 		"theme_DOT": "도타 2",
 		"theme_DRR": "듀라라라!!",
 		"theme_DGM": "디지몬",
-		"theme_RAG": "라면/과자",
+		"theme_RAG": "라면/과자/아이스크림",
 		"theme_LVL": "러브 라이브!",
 		"theme_LOL": "리그 오브 레전드",
 		"theme_MRN": "마법소녀 리리컬 나노하",
@@ -370,7 +370,7 @@
 		"theme_MKK": "메카쿠시티 액터즈",
 		"theme_MNG": "모노가타리 시리즈",
 		"theme_MOB": "모바일 게임",
-		"theme_HYK": "빙과",
+		"theme_HYK": "빙과 (애니메이션)",
 		"theme_CYP": "사이퍼즈",
 		"theme_HRH": "스즈미야 하루히",
 		"theme_STA": "스타크래프트",
