--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -212,7 +212,7 @@
 		"error_440": "손님, 본인 확인이 되지 않은 회원 및 만 16세 미만의 청소년은 오전 0시부터 오전 6시까지 게임 이용이 제한됩니다.",
 		"error_441": "회원님의 생년월일 정보를 읽을 수 없습니다. 로그인된 계정의 생년월일 정보가 공개되어 있는지 확인하신 뒤 끄투에서 다시 로그인해 보세요. 본인 확인이 끝나면 생년월일 정보를 숨겨도 됩니다.",
 		"error_442": "5분 이상 응답이 없어 서버와의 연결이 종료되었습니다.",
-		"error_443": "관리자에 의해 해당 계정으로의 채팅 이용이 제한되었습니다.",
+		"error_443": "안녕하세요, 플러스끄투입니다. 이 계정으로의 채팅 제재가 진행되어 채팅 입력이 제한되었습니다. 자세한 제재 사유 및 제재 내역은 플러스끄투 공식 카페나 디스코드에서 확인 가능하므로 이를 참고해주시기 바라며, 이의가 있으실 경우 support@kkutu.cc로 항소하시면 면밀히 재검토 하겠습니다.",
 		"error_444": "관리자에 의해 해당 계정으로의 게임 이용이 제한되었습니다.\n제한 사유: ",
 		"error_445": "본인 확인에 성공했습니다. 끄투를 이용해 주셔서 감사합니다.",
 		"error_446": "관리자에 의해 해당 IP 주소로의 게임 이용이 제한되었습니다.\n제한 사유: ",
@@ -222,8 +222,8 @@
 		"error_453": "손님 계정을 친구로 추가할 수 없습니다.",
 		"error_454": "친구 추가 요청에 대한 응답을 기다리고 있습니다.",
 		"error_455": "접속해 있지 않은 친구만 삭제할 수 있습니다.",
-		"error_456": "손님 계정의 접속을 비활성화했습니다.\n우측 상단의 로그인 단추를 눌러 로그인해 보세요!",
-		"error_457": "서버 점검 혹은 업데이트 진행 등의 사유로 게임 접속이 종료되었습니다.\nfree.kkutu.kr에서 다른 프리 서버를 이용해 보세요!",
+		"error_456": "중복되는 별명이 있습니다.",
+		"error_457": "너무 많이 닉네임을 변경했습니다. (주 1회 변경 가능)",
 		"error_500": "서버 점검 혹은 업데이트가 진행 중입니다.",
 		"error_555": "공사 중입니다! ㅠㅠ",
 		"turnError_402": "첫 턴 한방 금지",
@@ -337,6 +337,8 @@
 		"explManner": "한방 단어를 사용할 수 없게 합니다.",
 		"optInjeong": "어인정",
 		"explInjeong": "특수한 단어의 사용을 인정합니다.",
+		"optRankGame": "경쟁전",
+		"explRankGame": "경쟁전 PRESEASON (~프리시즌 종료시까지) / 한국어 끝말잇기 모드로 플레이 가능합니다.",
 		"optMission": "미션",
 		"explMission": "특정 글자를 포함시킨 단어로 이으면 추가 점수를 얻습니다.",
 		"explInjeongListTitle": "사용 가능한 단어 그룹",
@@ -380,7 +382,7 @@
 		"theme_DOT": "도타 2",
 		"theme_DRR": "듀라라라!!",
 		"theme_DGM": "디지몬",
-		"theme_RAG": "라면/과자",
+		"theme_RAG": "라면/과자/아이스크림",
 		"theme_LVL": "러브 라이브!",
 		"theme_LOL": "리그 오브 레전드",
 		"theme_MRN": "마법소녀 리리컬 나노하",
@@ -392,7 +394,7 @@
 		"theme_MOM": "모두의 마블",
 		"theme_MIN": "마인크래프트",
 		"theme_BRL": "브롤스타즈",
-		"theme_HYK": "빙과",
+		"theme_HYK": "빙과 (애니메이션)",
 		"theme_CYP": "사이퍼즈",
 		"theme_HRH": "스즈미야 하루히",
 		"theme_STA": "스타크래프트",
@@ -407,6 +409,7 @@
 		"theme_NEX": "비디오 게임",
 		"theme_MSI": "뮤지컬",
 		"theme_APP": "휴대폰 앱",
+		"theme_COR": "기업",
 		"theme_BRD": "보드게임",
 		"theme_VAL": "발로란트",
 		"theme_SNA": "세븐나이츠",
@@ -432,6 +435,7 @@
 		"theme_BUS": "버스 정류소",
 		"theme_BRN": "브랜드",
 		"theme_PSK": "프로세카",
+		"theme_RHY": "리듬게임",
 		"theme_SVL": "사운드 볼텍스",
 		"theme_WAK": "왁타버스",
 		"theme_AIR": "항공",
@@ -545,6 +549,7 @@
 		"gameResult": "게임 결과",
 		"scoreGain": "획득한 경험치",
 		"moneyGain": "획득한 핑",
+		"rankPointGain": "획득한 RP",
 		"scoreOrigin": "기본 제공 경험치",
 		"moneyOrigin": "기본 제공 핑",
 		"bonusFrom_q": "아이템 장착 효과",
@@ -556,6 +561,16 @@
 		"null": "(정보 없음)",
 		"record": "전적",
 		"kick": "강퇴",
+		"PRANK": "경쟁전:",
+		"UNRANKED": "초심자",
+		"BRONZE": "그린",
+		"SILVER": "스카이",
+		"GOLD": "블루",
+		"PLATINUM": "오렌지",
+		"DIAMOND": "레드",
+		"MASTER": "에메랄드",
+		"0LP": "0RP",
+		"LP": "RP",
 		"place": "위치",
 		"roomNumber": "번 방",
 		"lobby": "로비",
@@ -579,8 +594,15 @@
 		"obtainExp": "경험치를 획득했습니다",
 		"obtainMoney": "핑을 획득했습니다",
 		"sureConsume": "정말 이 항목을 사용합니까?",
-		
+		"nickChanged": "별명이 ",
+		"exorChanged": "소개말이 ",
+		"changed": "(으)로 변경되었습니다.",
+		"sureChangeNickLimit1": "정말 닉네임을 변경합니까? 변경 후 ",
+		"sureChangeNickLimit2": "일 간 닉네임을 다시 변경할 수 없습니다.",
+		"sureChangeNickNoLimit": "정말 닉네임을 변경합니까?",
 		"dress": "FA{shirt}꾸미기",
+		"myNickname": "별명",
+		"myNicknameX": "12글자 이내",
 		"myExordial": "소개 한마디",
 		"myExordialX": "100글자 이내",
 		"myMoremi": "내 모레미",
@@ -670,7 +692,7 @@
 		"shop": "FA{shop}상점",
 		"invite": "FA{user-plus}초대",
 		"inviteRobot": "AI 초대",
-		"dict": "FA{book}단어 등록",
+		"dict": "FA{book}사전",
 		"cafe": "FA{mug-hot}",
 		"wordPlus": "단어 추가",
 		"chatLog": "대화 기록",
