--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -256,6 +256,10 @@
 		"modeEKT": "영어 끄투",
 		"modeESH": "영어 끝말잇기",
 		"modeKKT": "한국어 쿵쿵따",
+		"modex19": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
+		"modex20": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
+		"modeKJH": "한국어 자유 끝말잇기",
+		"modeEJH": "영어 자유 끝말잇기",
 		"modeKSH": "한국어 끝말잇기",
 		"modeCSQ": "자음퀴즈",
 		"modeKCW": "한국어 십자말풀이",
