각종 버그 수정

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -343,6 +343,8 @@
 		"explInjeong": "특수한 단어의 사용을 인정합니다.",
 		"optRankGame": "경쟁전",
 		"explRankGame": "경쟁전 PRESEASON (~프리시즌 종료시까지) / 한국어 끝말잇기 모드로 플레이 가능합니다.",
+		"optItem": "아이템전",
+		"explItem": "테스트중입니다.",
 		"optMission": "미션",
 		"explMission": "특정 글자를 포함시킨 단어로 이으면 추가 점수를 얻습니다.",
 		"explInjeongListTitle": "사용 가능한 단어 그룹",
@@ -600,7 +602,7 @@
 		"sureConsume": "정말 이 항목을 사용합니까?",
 		"nickChanged": "별명이 ",
 		"exorChanged": "소개말이 ",
-		"changed": "(으)로 변경되었습니다.",
+		"changed": "(으)로 변경되었습니다. 변경된 닉네임은 새로고침 후 반영됩니다",
 		"sureChangeNickLimit1": "정말 닉네임을 변경합니까? 변경 후 ",
 		"sureChangeNickLimit2": "일 간 닉네임을 다시 변경할 수 없습니다.",
 		"sureChangeNickNoLimit": "정말 닉네임을 변경합니까?",
@@ -697,6 +699,7 @@
 		"invite": "FA{user-plus}초대",
 		"inviteRobot": "AI 초대",
 		"dict": "FA{book}사전",
+		"event": "FA{gift}이벤트",
 		"cafe": "FA{mug-hot}",
 		"wordPlus": "단어 추가",
 		"chatLog": "대화 기록",
