보상 관련 추가

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -574,7 +574,7 @@
 		"GOLD": "블루",
 		"PLATINUM": "오렌지",
 		"DIAMOND": "레드",
-		"MASTER": "에메랄드",
+		"MASTER": "마스터",
 		"0LP": "0RP",
 		"LP": "RP",
 		"place": "위치",
