--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -222,8 +222,10 @@
 		"error_453": "손님 계정을 친구로 추가할 수 없습니다.",
 		"error_454": "친구 추가 요청에 대한 응답을 기다리고 있습니다.",
 		"error_455": "접속해 있지 않은 친구만 삭제할 수 있습니다.",
-		"error_456": "중복되는 별명이 있습니다.",
+		"error_456": "중복되는 닉네임이 있습니다.",
 		"error_457": "너무 많이 닉네임을 변경했습니다. (주 1회 변경 가능)",
+		"error_458": "부적절한 닉네임입니다. (한국어, 영어, 중국어, 일본어, 일부 특수문자, 숫자만 이용 가능합니다)",
+		"error_459": "부적절한 닉네임입니다. (비속어가 포함된 닉네임)",
 		"error_500": "서버 점검 혹은 업데이트가 진행 중입니다.",
 		"error_555": "공사 중입니다! ㅠㅠ",
 		"turnError_402": "첫 턴 한방 금지",
@@ -306,8 +308,9 @@
 		"modex11": "주어진 주제에 맞는 영어 어휘를 댑니다.",
 		"modex12": "무작위로 섞인 글자들 속에서 한국어 단어를 솎아 냅니다.",
 		"modex13": "무작위로 섞인 글자들 속에서 영어 단어를 솎아 냅니다.",
-		"modex14": "<b>테스트중인 모드로, 정상 이용이 불가합니다.</b> 한글로 된 2자 ~ 10자의 단어를 그림으로 설명하고 맞춥니다. <b>경고: 모바일은 정상플레이 불가</b>",
-		"modex15": "<b>테스트중인 모드로, 정상 이용이 불가합니다.</b> 영어로 된 4자 ~ 16자의 단어를 그림으로 설명하고 맞춥니다. <b>경고: 모바일은 정상플레이 불가</b>",
+		"modex14": "사전 등재 여부와 관련없이 자유롭게 단어를 입력합니다.",
+		"modex15": "수학 공식이나 문제 이미지를 보고 답을 맞춥니다.",
+		"modex16": "한자를 보고 뜻과 발음을 맞춥니다.<br>山 → 뫼 산",
 		"numRound": "라운드 수",
 		"roundTime": "라운드 시간",
 		"players": "참여자",
@@ -342,7 +345,7 @@
 		"optInjeong": "어인정",
 		"explInjeong": "특수한 단어의 사용을 인정합니다.",
 		"optRankGame": "경쟁전",
-		"explRankGame": "경쟁전 PRESEASON (~프리시즌 종료시까지) / 한국어 끝말잇기 모드로 플레이 가능합니다.",
+		"explRankGame": "경쟁전 1.0 / 한국어 끝말잇기 모드로 플레이 가능합니다.",
 		"optItem": "아이템전",
 		"explItem": "테스트중입니다.",
 		"optMission": "미션",
@@ -600,14 +603,14 @@
 		"obtainExp": "경험치를 획득했습니다",
 		"obtainMoney": "핑을 획득했습니다",
 		"sureConsume": "정말 이 항목을 사용합니까?",
-		"nickChanged": "별명이 ",
+		"nickChanged": "닉네임이 ",
 		"exorChanged": "소개말이 ",
 		"changed": "(으)로 변경되었습니다. 변경된 닉네임은 새로고침 후 반영됩니다",
 		"sureChangeNickLimit1": "정말 닉네임을 변경합니까? 변경 후 ",
 		"sureChangeNickLimit2": "일 간 닉네임을 다시 변경할 수 없습니다.",
 		"sureChangeNickNoLimit": "정말 닉네임을 변경합니까?",
 		"dress": "FA{shirt}꾸미기",
-		"myNickname": "별명",
+		"myNickname": "닉네임",
 		"myNicknameX": "12글자 이내",
 		"myExordial": "소개 한마디",
 		"myExordialX": "100글자 이내",
