--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -281,6 +281,9 @@
 		"modex19": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
 		"modex20": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
 		"modeKJH": "한국어 자유 끝말잇기",
+		"modeKMQ": "수학퀴즈",
+		"modeKOX": "OX퀴즈",
+		"modeKHQ": "한자퀴즈",
 		"modeEJH": "영어 자유 끝말잇기",
 		"modeKSH": "한국어 끝말잇기",
 		"modeCSQ": "자음퀴즈",
@@ -366,6 +369,12 @@
 		"explUnlimited": "그림퀴즈에서 나오는 단어의 길이를 무한정으로 조절합니다.",
 		"optShort": "짧음",
 		"explShort": "그림퀴즈에서 나오는 단어의 길이를 최대 4글자로 조절합니다.",
+		"optEle": "초등학교 수준",
+		"explEle": "초등학교에서 배우는 사칙연산, 자릿수 읽기 등의 문제가 나옵니다.",
+		"optMid": "중학교 수준",
+		"explMid": "중학교에서 배우는 미지수의 계산, 도형의 넓이, 인수분해 등의 문제가 나옵니다.",
+		"optHigh": "고등학교 수준",
+		"explHigh": "고등학교에서 배우는 원의 방정식, 함수, 복소수, 곱셈공식 등의 문제가 나옵니다.",
 		"hidden": "(미공개)",
 		"pickInjeong": "주제 선택",
 		"explInjPick": "게임에서 사용할 주제를 선택하세요.",
@@ -383,6 +392,10 @@
 		"themeis": "단어의 주제: ",
 		"kpm": "<label style='font-size: 11px;'>타/분</label>",
 		
+		"level_ELE": "초등학교",
+		"level_MID": "중학교",
+		"level_HIGH": "고등학교",
+
 		"theme_IMS": "THE iDOLM@STER",
 		"theme_VOC": "VOCALOID",
 		"theme_KRR": "개구리 중사 케로로",
