인게임으로 창 전환

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -402,6 +402,7 @@
 		"theme_KTV": "국내 방송 프로그램",
 		"theme_NSK": "니세코이",
 		"theme_KOT": "대한민국 철도역",
+		"theme_KOR": "대한민국 명소",
 		"theme_DOT": "도타 2",
 		"theme_DRR": "듀라라라!!",
 		"theme_DGM": "디지몬",
@@ -666,7 +667,7 @@
 		"myId": "내 식별 번호: ",
 		"send": "전송",
 		"help": "FA{headset}",
-		"helpText": "고객센터",
+		"helpText": "도움말",
 		"settings": "FA{gear}",
 		"settingsText": "환경 설정",
 		"community": "FA{comments}",
