--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -281,6 +281,7 @@
 		"modex19": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
 		"modex20": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
 		"modeKJH": "한국어 자유 끝말잇기",
+		"modeKVK": "음성인식 끝말잇기",
 		"modeKMQ": "수학퀴즈",
 		"modeKOX": "OX퀴즈",
 		"modeKHQ": "한자퀴즈",
@@ -314,6 +315,7 @@
 		"modex13": "무작위로 섞인 글자들 속에서 영어 단어를 솎아 냅니다.",
 		"modex14": "사전 등재 여부와 관련없이 자유롭게 단어를 입력합니다.",
 		"modex15": "수학 공식이나 문제 이미지를 보고 답을 맞춥니다.",
+		"modex17": "목소리를 인식하여 끝말잇기를 진행합니다.",
 		"modex16": "한자를 보고 뜻과 발음을 맞춥니다.<br>山 → 뫼 산",
 		"numRound": "라운드 수",
 		"roundTime": "라운드 시간",
