--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -165,7 +165,7 @@
 		"dictionarySupport": "사전 정보 제공:<a href='http://wordnet.princeton.edu' target='_blank'>WordNet</a><br><label style='color: #777777;'>WordNet 3.0 Copyright 2006 by Princeton University. All rights reserved.</label>",
 		"sandbox": "샌드박스 :: SDBX",
 		"etcSupport": "도움:<a href='http://cafe.naver.com/sdbx' target='_blank'>샌드박스 :: SDBX</a>",
-		"welcome": "아무 키나 눌러 시작하세요",
+		"welcome": "환영합니다!",
 		"welcomeTestServer": "테스트 서버에 접속했습니다. 본 서버는 특별한 공지 없이 폭발하거나 닫힐 수 있습니다.",
 		"loadRemain": "불러오는 중... 앞으로 ",
 		"closed": "서버와의 연결이 종료되었습니다.",
@@ -574,6 +574,7 @@
 		"scoreGain": "획득한 경험치",
 		"moneyGain": "획득한 핑",
 		"rankPointGain": "획득한 RP",
+		"forestPointGain": "나무심기에 기부한 후원액",
 		"scoreOrigin": "기본 제공 경험치",
 		"moneyOrigin": "기본 제공 핑",
 		"bonusFrom_q": "아이템 장착 효과",
