--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -1,6 +1,6 @@
 {
 	"GLOBAL": {
-		"GPL": "<div style='color: #666;'>플러스끄투 Copyright (C) 2021~ Plus KKuTu (support@kkutu.cc)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/10kwon/KKuTu'>확인하기</a></div>",
+		"GPL": "<div style='color: #666;'>플러스끄투 Copyright (C) 2021~ Morem.ME (support@morem.me)<br>이 프로그램은 제품에 대한 어떠한 형태의 보증도 제공되지 않습니다.<br>이 프로그램은 자유 소프트웨어이며 배포 규정을 만족시키는 조건 아래 자유롭게 재배포할 수 있습니다.<br>이에 대한 자세한 사항은 본 프로그램의 구현을 담은 다음 레포지토리에서 확인하십시오: <a target='_blank' href='https://github.com/10kwon/KKuTu'>확인하기</a></div>",
 
 		"CREATOR":	"개발자 블로그",
 		"HOME":		"FA{home}",
@@ -212,7 +212,7 @@
 		"error_440": "손님, 본인 확인이 되지 않은 회원 및 만 16세 미만의 청소년은 오전 0시부터 오전 6시까지 게임 이용이 제한됩니다.",
 		"error_441": "회원님의 생년월일 정보를 읽을 수 없습니다. 로그인된 계정의 생년월일 정보가 공개되어 있는지 확인하신 뒤 끄투에서 다시 로그인해 보세요. 본인 확인이 끝나면 생년월일 정보를 숨겨도 됩니다.",
 		"error_442": "5분 이상 응답이 없어 서버와의 연결이 종료되었습니다.",
-		"error_443": "안녕하세요, 플러스끄투입니다. 이 계정으로의 채팅 제재가 진행되어 채팅 입력이 제한되었습니다. 자세한 제재 사유 및 제재 내역은 플러스끄투 공식 카페나 디스코드에서 확인 가능하므로 이를 참고해주시기 바라며, 이의가 있으실 경우 support@kkutu.cc로 항소하시면 면밀히 재검토 하겠습니다.",
+		"error_443": "안녕하세요, Morem.ME입니다. 이 계정으로의 채팅 제재가 진행되어 채팅 입력이 제한되었습니다. 자세한 제재 사유 및 제재 내역은 플러스끄투 공식 카페나 디스코드에서 확인 가능하므로 이를 참고해주시기 바라며, 이의가 있으실 경우 support@morem.me로 항소하시면 면밀히 재검토 하겠습니다.",
 		"error_444": "관리자에 의해 해당 계정으로의 게임 이용이 제한되었습니다.\n제한 사유: ",
 		"error_445": "본인 확인에 성공했습니다. 끄투를 이용해 주셔서 감사합니다.",
 		"error_446": "관리자에 의해 해당 IP 주소로의 게임 이용이 제한되었습니다.\n제한 사유: ",
