--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -172,7 +172,7 @@
 		"error": "연결 중 문제가 발생했습니다!",
 		"error_full": "서버 제한 인원을 초과했습니다... 잠시 후 접속해 주세요!!!",
 		"error_400": "잘못된 접근입니다.",
-		"error_401": "손님 계정은 게임 관전만 가능합니다.\n우측 상단의 로그인 단추를 눌러 로그인해 보세요!",
+		"error_401": "손님 계정은 귓속말을 할 수 없습니다.\n우측 상단의 로그인 단추를 눌러 로그인해 보세요!",
 		"error_402": "손님 계정은 감자 서버에만 접속이 가능합니다.\n우측 상단의 로그인 단추를 눌러 로그인해 보세요!",
 		"error_403": "비밀번호가 틀렸습니다.",
 		"error_404": "입장 가능한 방을 찾을 수 없습니다. 새 방을 생성합니까?",
