--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -161,7 +161,7 @@
 		"server_19": "고구마",
 		"serverEnter": "접속",
 		
-		"websocketUnsupport": "본 게임은 Internet Explorer(10), 크롬(16), 파이어폭스(11), 오페라(12.1), 사파리(6) 이상의 버전에서 지원합니다!<br>브라우저를 업데이트해 주세요.",
+		"websocketUnsupport": "본 게임은 Chrome, Edge, Whale, Safari에서 지원합니다!<br>브라우저를 업데이트해 주세요.",
 		"dictionarySupport": "사전 정보 제공:<a href='http://wordnet.princeton.edu' target='_blank'>WordNet</a><br><label style='color: #777777;'>WordNet 3.0 Copyright 2006 by Princeton University. All rights reserved.</label>",
 		"sandbox": "샌드박스 :: SDBX",
 		"etcSupport": "도움:<a href='http://cafe.naver.com/sdbx' target='_blank'>샌드박스 :: SDBX</a>",
@@ -191,7 +191,7 @@
 		"error_417": "해당 계정이 로비에 존재하지 않습니다.",
 		"error_418": "팀 구성이 잘못되었습니다.",
 		"error_419": "해당 사용자가 이미 초대 요청을 받았습니다.",
-		"error_421": "프로필 관리는 로그인 후 이용하실 수 있습니다.\n우측 상단의 로그인 단추를 눌러 로그인해 보세요!",
+		"error_421": "꾸미기는 로그인 후 이용하실 수 있습니다.\n우측 상단의 로그인 단추를 눌러 로그인해 보세요!",
 		"error_422": "손님 계정은 초대할 수 없습니다.",
 		"error_423": "상점은 로그인 후 이용하실 수 있습니다.\n우측 상단의 로그인 단추를 눌러 로그인해 보세요!",
 		"error_424": "해당 사용자가 끄투에 접속하지 않았거나 이 서버에 접속해 있지 않습니다. (이름에 공백이 있다면 공백을 빼고 입력해 주세요.)\n\n사용자: ",
@@ -627,13 +627,13 @@
 		"sureConsume": "정말 이 항목을 사용합니까?",
 		"nickChanged": "닉네임이 ",
 		"exorChanged": "소개말이 ",
-		"changed": "(으)로 변경되었습니다. 변경된 닉네임은 새로고침 후 반영됩니다",
+		"changed": "(으)로 변경되었습니다. 변경된 닉네임은 재로그인 후 반영됩니다",
 		"sureChangeNickLimit1": "정말 닉네임을 변경합니까? 변경 후 ",
 		"sureChangeNickLimit2": "일 간 닉네임을 다시 변경할 수 없습니다.",
 		"sureChangeNickNoLimit": "정말 닉네임을 변경합니까?",
 		"dress": "FA{shirt}꾸미기",
 		"myNickname": "닉네임",
-		"myNicknameX": "12글자 이내",
+		"myNicknameX": "한/영/중/일/숫자 12글자 이내 (7일간 변경 불가)",
 		"myExordial": "소개 한마디",
 		"myExordialX": "100글자 이내",
 		"myMoremi": "내 모레미",
