언브랜딩 작업 및 영어작업

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -16,7 +16,7 @@
 		"GLOBAL_NOTICE": "클릭하여 닫기",
 	
 		"VERSION":	"버전",
-		"LEVEL":	"레벨",
+		"LEVEL":	"Lv.",
 		"WIN":		"승리",
 		"LOSE":		"패배",
 		"P":		"전",
@@ -74,8 +74,8 @@
 		"ITEM_TERM": "기간제 항목",
 		"ITEM_TERMED": "까지 사용 가능",
 		
-		"OPTS_gEXP": "획득 경험치",
-		"OPTS_hEXP": "분당 추가 경험치",
+		"OPTS_gEXP": "획득 XP",
+		"OPTS_hEXP": "분당 추가 XP",
 		"OPTS_gMNY": "획득 핑",
 		"OPTS_hMNY": "분당 추가 핑",
 		
@@ -577,11 +577,11 @@
 		"class_aux": "조동",
 		
 		"gameResult": "게임 결과",
-		"scoreGain": "획득한 경험치",
+		"scoreGain": "획득한 XP",
 		"moneyGain": "획득한 핑",
 		"rankPointGain": "획득한 RP",
 		"forestPointGain": "나무심기에 기부한 후원액",
-		"scoreOrigin": "기본 제공 경험치",
+		"scoreOrigin": "기본 제공 XP",
 		"moneyOrigin": "기본 제공 핑",
 		"bonusFrom_q": "아이템 장착 효과",
 		"bonusFrom_k": "오끄감 버프 효과",
@@ -605,7 +605,7 @@
 		"place": "위치",
 		"roomNumber": "번 방",
 		"lobby": "로비",
-		"recordScore": "총 경험치",
+		"recordScore": "총 XP",
 		"sProfile": "님의 정보",
 		"sRoomInfo": "번 방의 정보",
 		"kickVote": "강퇴 투표",
@@ -622,7 +622,7 @@
 		"guestExit": "관전을 재미있게 하셨나요?\n지금 우측 상단의 로그인 단추를 눌러 플레이해 보세요!",
 		"saveReplay": "경기 저장",
 		"obtained": "아이템을 획득했습니다",
-		"obtainExp": "경험치를 획득했습니다",
+		"obtainExp": "XP를 획득했습니다",
 		"obtainMoney": "핑을 획득했습니다",
 		"sureConsume": "정말 이 항목을 사용합니까?",
 		"nickChanged": "닉네임이 ",
@@ -694,7 +694,7 @@
 		"sureInvite": "님을 초대합니까?",
 		"autoReady": "자동 준비",
 		"noNotice": "접속 시 공지사항 숨기기",
-		"sortUser": "접속자 목록 레벨 순 정렬",
+		"sortUser": "접속자 목록 Lv. 순 정렬",
 		"onlyWaiting": "대기 중인 방만 보기",
 		"onlyUnlock": "열려 있는 방만 보기",
 		"prevPage": "이전",
@@ -753,7 +753,7 @@
 		"notEnoughMoney": "핑이 부족합니다.",
 		"purchased": "성공적으로 구매했습니다. 구매한 상품은 화면 왼쪽 아래의 [내 정보] > [프로필 관리] 단추를 눌러 확인할 수 있습니다.",
 		
-		"okgExpl": "<h4><label style='color: #FFFF44;'>오늘도 끄투를 이용해 주셔서 감사합니다!</label></h4>끄투에서 사람들과 함께 게임 플레이 시간 10분을 달성할 때마다<br>경험치와 핑을 더욱 많이 얻을 수 있는 <label style='color: #FFFF44;'>오끄감 버프</label>를 획득할 수 있습니다!",
+		"okgExpl": "<h4><label style='color: #FFFF44;'>오늘도 끄투를 이용해 주셔서 감사합니다!</label></h4>끄투에서 사람들과 함께 게임 플레이 시간 10분을 달성할 때마다<br>XP와 핑을 더욱 많이 얻을 수 있는 <label style='color: #FFFF44;'>오끄감 버프</label>를 획득할 수 있습니다!",
 		"okgNotice": "게임 플레이 시간 10분을 달성하여 오끄감 버프를 획득했습니다!",
 		"okgCurrent": "현재 오끄감 버프 중첩 (최대 18): ",
 		"okgExpired": "자정이 지나 오끄감 버프 중첩이 초기화되었습니다.",
@@ -781,7 +781,7 @@
 		"searching": "검색 중",
 		"injeongReq": "추가 요청",
 		"wpDesc1": "추가되기를 희망하는 단어를 입력하세요.",
-		"wpDesc2": "단어가 추가되면 경험치 보상을 획득합니다!",
+		"wpDesc2": "단어가 추가되면 XP 보상을 획득합니다!",
 		"wpHere": "검색어",
 		"wpInput": "여기에 입력",
 		"wpReward": "결과",
@@ -807,7 +807,7 @@
 		"fcSuccess": "성공!",
 		"fcGetScore": "점수 획득",
 		"fcLevelUp": "레벨 업!",
-		"fcNowLevel": "현재 레벨",
+		"fcNowLevel": "현재 Lv.",
 		"fcFail": "실패!",
 		"fcRestart": "W키를 눌러 다시 하기"
 	},
