이미지 최적화

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -136,6 +136,8 @@
 		"meta_keys": "끄투,kkutu,끝말잇기,온라인,웹,쿵쿵따,영어끝말잇기,영어쿵쿵따,시리토리,끝말잇기사이트,자음퀴즈,초성퀴즈,자퀴,십자말풀이,가로세로,타자,타자연습,앞말잇기",
 		
 		"gameStart": "게임 시작!",
+		"getStarted": "시작하기",
+		"acceptContinue": "동의하고 닉네임 설정",
 		"serverList": "서버 목록",
 		"serverRefresh": "서버 목록을 다시 불러옵니다.",
 		"serverWait": "잠시 기다려 주세요.",
@@ -253,6 +255,7 @@
 		"Room": "방",
 		"Game": "게임",
 		"Me": "FA{user}내 정보",
+		"Me2": "내 정보",
 		"globalWin": "통산",
 		"whisper": "귓속말",
 		"handover": "방장 인계",
@@ -275,6 +278,7 @@
 		"gameMode": "게임 유형",
 		"mcKorean": "한국어",
 		"mcEnglish": "영어",
+		"mcTest": "테스트 모드",
 		"modeEKT": "영어 끄투",
 		"modeESH": "영어 끝말잇기",
 		"modeKKT": "한국어 쿵쿵따",
@@ -383,6 +387,9 @@
 		"explHigh": "고등학교에서 배우는 원의 방정식, 함수, 복소수, 곱셈공식 등의 문제가 나옵니다.",
 		"hidden": "(미공개)",
 		"pickInjeong": "주제 선택",
+		"wordWarning": "단어 신청은 디스코드 피드백 -> 단어 신청에서만 받고 있습니다.",
+		"enterKeyword": "검색어 입력",
+		"search": "검색",
 		"explInjPick": "게임에서 사용할 주제를 선택하세요.",
 		"injpickAll": "모두 설정",
 		"injpickNo": "모두 해제",
@@ -398,6 +405,17 @@
 		"themeis": "단어의 주제: ",
 		"kpm": "<label style='font-size: 11px;'>타/분</label>",
 		
+		"font_pretendard": "프리텐다드 (기본값)",
+		"font_nanum": "나눔바른고딕",
+		"font_mgothic": "맑은 고딕",
+		"font_galmuri14": "갈무리 14px",
+		"font_galmuri11": "갈무리 11px",
+		"font_galmuri9": "갈무리 9px",
+		"font_galmuri7": "갈무리 7px",
+		"font_d2coding": "D2Coding",
+		"font_gulim": "굴림",
+		"font_dotum": "돋움",
+
 		"level_ELE": "초등학교",
 		"level_MID": "중학교",
 		"level_HIGH": "고등학교",
@@ -462,7 +480,9 @@
 		"theme_KRT": "카트라이더",
 		"theme_COC": "클로/클오클",
 		"theme_KKU": "끄투 프리서버",
-		"theme_BUS": "버스 정류소",
+		"theme_BUS": "버스 정류장",
+		"theme_NCA": "국가지정문화재",
+		"theme_OCP": "직업",
 		"theme_BRN": "브랜드",
 		"theme_PSK": "프로세카",
 		"theme_RHY": "리듬게임",
@@ -588,6 +608,7 @@
 		"lvUp": "레벨 업!",
 		"ping": "핑",
 		"making": "공사 중입니다! ㅠㅠ",
+		"close": "닫기",
 		"robot": "끄투 봇",
 		"null": "(정보 없음)",
 		"record": "전적",
@@ -622,6 +643,7 @@
 		"guestExit": "관전을 재미있게 하셨나요?\n지금 우측 상단의 로그인 단추를 눌러 플레이해 보세요!",
 		"saveReplay": "경기 저장",
 		"obtained": "아이템을 획득했습니다",
+		"obtainedTit": "아이템 획득",
 		"obtainExp": "XP를 획득했습니다",
 		"obtainMoney": "핑을 획득했습니다",
 		"sureConsume": "정말 이 항목을 사용합니까?",
@@ -661,6 +683,9 @@
 		"cfSureCompose": "정말 조합합니까? 조합 재료로 쓰인 글자 조각들은 모두 사라집니다.",
 		"cfComposed": "조합에 성공했습니다!",
 		"hasExpired": " 항목의 사용 기한이 다 되어 사라졌습니다.",
+		"coupon": "쿠폰",
+		"mvpPurchase": "MVP권 구매하기",
+		"officialSNS": "공식 커뮤니티", 
 		
 		"cmd_r": "(/r) 준비 단추를 누릅니다. 방장일 경우 시작 단추를 누릅니다.",
 		"cmd_cls": "(/cls) 채팅 창을 비웁니다.",
@@ -684,10 +709,12 @@
 		"nickname": "이름",
 		"spectate": "FA{eye}관전하기",
 		"mute": "음소거",
-		"bgm": "배경 음악",
-		"effect": "효과음",
 		"save": "저장",
 		"denyReq": "요청 거부",
+		"effVol": "효과음 볼륨",
+		"bgmVol": "배경 음악 볼륨",
+		"font": "폰트",
+		"vibration": "떨림 효과 감소",
 		"ingames": "게임 관련",
 		"etc": "기타",
 		"denyInvite": "초대",
@@ -723,6 +750,7 @@
 		"shop": "FA{shop}상점",
 		"invite": "FA{user-plus}초대",
 		"inviteRobot": "AI 초대",
+		"shareLink": "링크 공유",
 		"dict": "FA{book}사전",
 		"event": "FA{gift}이벤트",
 		"payment": "FA{won-sign}후원하기",
