효과음 개선 및 배경 음악 URL 프록시 추가

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -446,7 +446,7 @@
 		"theme_CYP": "사이퍼즈",
 		"theme_HRH": "스즈미야 하루히",
 		"theme_STA": "스타크래프트",
-		"theme_OIJ": "신조어",
+		"theme_OIJ": "신조어/유행어",
 		"theme_KGR": "아지랑이 프로젝트",
 		"theme_ESB": "앙상블 스타즈!",
 		"theme_ELW": "엘소드",
@@ -711,6 +711,8 @@
 		"mute": "음소거",
 		"save": "저장",
 		"denyReq": "요청 거부",
+		"bgmOverride": "배경 음악 URL (MP3, OGG, WAV / 재접속시 반영)",
+		"overrideUrl": "URL 입력 (YouTube 미지원)",
 		"effVol": "효과음 볼륨",
 		"bgmVol": "배경 음악 볼륨",
 		"font": "폰트",
@@ -791,10 +793,10 @@
 		"replayPlayers": "참가자",
 		"replayView": "보기",
 		"replayError": "올바른 끄투 리플레이 파일이 아닙니다.",
-		"replayPrev": "←",
+		"replayPrev": "<-",
 		"replayPause": "❚❚",
 		"replayResume": "▶",
-		"replayNext": "→",
+		"replayNext": "->",
 		
 		"aiSetting": "AI 설정",
 		"selectLevel": "난이도",
