주제 이미지 작업 및 MVP권 테스트

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -426,6 +426,7 @@
 		"theme_KTV": "국내 방송 프로그램",
 		"theme_NSK": "니세코이",
 		"theme_KOT": "대한민국 철도역",
+		"theme_JOT": "일본 철도역",
 		"theme_KOR": "대한민국 명소",
 		"theme_DOT": "도타 2",
 		"theme_DRR": "듀라라라!!",
@@ -447,6 +448,7 @@
 		"theme_HRH": "스즈미야 하루히",
 		"theme_STA": "스타크래프트",
 		"theme_OIJ": "신조어/유행어",
+		"theme_TRC": "트릭컬 리바이브",
 		"theme_KGR": "아지랑이 프로젝트",
 		"theme_ESB": "앙상블 스타즈!",
 		"theme_ELW": "엘소드",
@@ -675,6 +677,7 @@
 		"dressWhichHand": "어떤 손에 장착합니까? (확인: 왼쪽, 취소: 오른쪽)",
 		"charFactory": "글자 조합소",
 		"cfCompose": "조합",
+		"cfReset": "원래대로",
 		"cfTray": "글자 조각을 클릭하여 단어를 만들어 보세요.",
 		"cfBlend": "뜻이 없는 글자 조각 3개를 융합시킬 수 있습니다. 조합 단추를 누르면 융합이 진행됩니다.",
 		"cfReward": "조합 보상",
@@ -713,6 +716,8 @@
 		"denyReq": "요청 거부",
 		"bgmOverride": "배경 음악 URL (MP3, OGG, WAV / 재접속시 반영)",
 		"overrideUrl": "URL 입력 (YouTube 미지원)",
+		"splashOverride": "로딩 이미지 URL",
+		"overrideImgUrl": "URL 입력",
 		"effVol": "효과음 볼륨",
 		"bgmVol": "배경 음악 볼륨",
 		"font": "폰트",
