로케일 업데이트

--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -19,13 +19,13 @@
 		"LEVEL":	"Lv.",
 		"WIN":		"Win",
 		"LOSE":		"Lose",
-		"P":		"Plays",
-		"W":		"Wins",
-		"L":		"Loses",
+		"P":		" games",
+		"W":		" wins",
+		"L":		" loses",
 		"WR":		"Winning Rate",
 		"S":		"",
-		"PTS":		"Points",
-		"MN":		"Peoples",
+		"PTS":		"XP",
+		"MN":		"",
 		"GAE":		"",
 		
 		"PJ":		"Rating",
