--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -450,6 +450,7 @@
 		"theme_OIJ": "신조어/유행어",
 		"theme_TRC": "트릭컬 리바이브",
 		"theme_KEM": "카카오톡 이모티콘",
+		"theme_NOT": "북한 철도역",
 		"theme_KGR": "아지랑이 프로젝트",
 		"theme_ESB": "앙상블 스타즈!",
 		"theme_ELW": "엘소드",
