--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -51,7 +51,7 @@
 		"SECOND":	"초",
 		"AM":		"오전",
 		"PM":		"오후",
-		"AD":		"광고",
+		"AC":		"광고 (문의: support@kkutu.cc)",
 		"LOADING":	"불러오는 중",
 		"TEAM_100":	"파랑 팀",
 		"TEAM_200":	"빨강 팀",
@@ -256,6 +256,7 @@
 		"SideList": "FA{chevron-right}빠른 실행",
 		"Shop": "FA{shopping-bag}상점",
 		"Chat": "FA{comment}채팅",
+		"P4jrKHDWS3x3": "FA{comment}채팅",
 		"Room": "방",
 		"Game": "게임",
 		"Me": "FA{user}내 정보",
