--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -51,7 +51,7 @@
 		"SECOND":	"초",
 		"AM":		"오전",
 		"PM":		"오후",
-		"AC":		"광고 (문의: support@kkutu.cc)",
+		"AC":		"광고 (문의: support@kkutu.plus)",
 		"LOADING":	"불러오는 중",
 		"TEAM_100":	"파랑 팀",
 		"TEAM_200":	"빨강 팀",
@@ -132,7 +132,7 @@
 	},
 	"kkutu": {
 		"title": "플러스끄투",
-		"version": "2.5.1",
+		"version": "3.3.3",
 		
 		"meta_desc": "웹에서 즐기는 끝말잇기 온라인, 쿵쿵따, 수학퀴즈, 앞말잇기, 자음퀴즈, 모음퀴즈, 십자말풀이! 플러스끄투에서 모두 즐겨보세요.",
 		"meta_keys": "끄투,kkutu,끝말잇기,온라인,웹,쿵쿵따,영어끝말잇기,영어쿵쿵따,시리토리,끝말잇기사이트,자음퀴즈,초성퀴즈,자퀴,십자말풀이,가로세로,타자,타자연습,앞말잇기",
@@ -291,6 +291,7 @@
 		"modex20": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
 		"modeKJH": "한국어 자유 끝말잇기",
 		"modeKVK": "음성인식 끝말잇기",
+		"modeKMT": "수학 대결",
 		"modeKMQ": "수학퀴즈",
 		"modeKMU": "ㅗㅡㅟㅡ",
 		"modeKOX": "OX퀴즈",
@@ -325,7 +326,7 @@
 		"modex13": "무작위로 섞인 글자들 속에서 영어 단어를 솎아 냅니다.",
 		"modex14": "사전 등재 여부와 관련없이 자유롭게 단어를 입력합니다.",
 		"modex15": "수학 공식이나 문제 이미지를 보고 답을 맞춥니다.",
-		"modex16": "주어진 모음에 맞는 한국어 어휘를 댑니다.",
+		"modex16": "덧셈, 뺄셈, 곱셈 식을 더 많이 푸는 사람이 승리합니다.",
 		"modex17": "목소리를 인식하여 끝말잇기를 진행합니다.",
 		"modex18": "한자를 보고 뜻과 발음을 맞춥니다.<br>山 → 뫼 산",
 		"numRound": "라운드 수",
