--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -132,7 +132,7 @@
 	},
 	"kkutu": {
 		"title": "플러스끄투",
-		"version": "3.3.3",
+		"version": "3.2.4",
 		
 		"meta_desc": "웹에서 즐기는 끝말잇기 온라인, 쿵쿵따, 수학퀴즈, 앞말잇기, 자음퀴즈, 모음퀴즈, 십자말풀이! 플러스끄투에서 모두 즐겨보세요.",
 		"meta_keys": "끄투,kkutu,끝말잇기,온라인,웹,쿵쿵따,영어끝말잇기,영어쿵쿵따,시리토리,끝말잇기사이트,자음퀴즈,초성퀴즈,자퀴,십자말풀이,가로세로,타자,타자연습,앞말잇기",
@@ -241,6 +241,7 @@
 		"turnError_409": "이미 쓰인 단어",
 		"turnError_412": "신조어 금지",
 		"turnError_414": "사전에 있는 단어",
+		"turnError_415": "금지어",
 		"checkAgeAsk": "끄투에서는 본인 확인을 위해 생년월일을 입력받고 있습니다. 입력된 생년월일은 본인 확인 및 내부 정보 처리에만 이용되며 제3자에게 공개되지 않습니다.\n본인 확인을 진행합니까?",
 		"checkAgeNo": "입력 값이 올바르지 않습니다. 다시 확인해 주세요.",
 		"checkAgeInput1": "생년월일 중 연도를 입력해 주세요. (4자리)",
@@ -287,6 +288,7 @@
 		"modeEKT": "영어 끄투",
 		"modeESH": "영어 끝말잇기",
 		"modeKKT": "한국어 쿵쿵따",
+		"modeKOK": "한국어 오리진 쿵쿵따",
 		"modex19": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
 		"modex20": "끝 한 자리로 시작하는 아무 말로 잇습니다.",
 		"modeKJH": "한국어 자유 끝말잇기",
@@ -327,7 +329,7 @@
 		"modex14": "사전 등재 여부와 관련없이 자유롭게 단어를 입력합니다.",
 		"modex15": "수학 공식이나 문제 이미지를 보고 답을 맞춥니다.",
 		"modex16": "덧셈, 뺄셈, 곱셈 식을 더 많이 푸는 사람이 승리합니다.",
-		"modex17": "목소리를 인식하여 끝말잇기를 진행합니다.",
+		"modex17": "근본의 귀환! 오리진 쿵쿵따 점수체계가 적용됩니다. (퍼펙트 +40, 굿 +30, 일반 +10, 실패 -70)<br>한 자리로 시작하는 세 글자의 한국어 어휘로 잇습니다.<br>강아<u>지</u> → <u>지</u>렁<u>이</u> → <u>이</u>발소",
 		"modex18": "한자를 보고 뜻과 발음을 맞춥니다.<br>山 → 뫼 산",
 		"numRound": "라운드 수",
 		"roundTime": "라운드 시간",
@@ -383,6 +385,8 @@
 		"explStrict": "방언, 옛말, 북한말을 제외한 명사 단어만 입력할 수 있습니다.",
 		"optSami": "3232",
 		"explSami": "세 글자 단어와 두 글자 단어를 번갈아가며 잇습니다.",
+		"optProhibit": "금지어",
+		"explProhibit": "판을 끝내게 한 단어를 사용할 수 없게 합니다.",
 		"optNo2": "2글자 금지",
 		"explNo2": "두 글자 단어의 사용을 막습니다.",
 		"optUnlimited": "무한정",
