--- a/Server/lib/Web/lang/en_US.json
+++ b/Server/lib/Web/lang/en_US.json
@@ -100,7 +100,7 @@
 		"title": "Sign In",
 		"loginWith": "Select a sign-in method",
 		"withDaldalso": "Sign in with Daldalso",
-		"withNaver": "Sign in with CHZZK",
+		"withNaver": "Sign in with NAVER",
 		"withFacebook": "Sign in with Facebook",
 		"withGoogle": "Sign in with Google",
 		"withTwitter": "Sign in with X",
