--- a/Server/lib/Web/lang/ja_JP.json
+++ b/Server/lib/Web/lang/ja_JP.json
@@ -100,7 +100,7 @@
 		"title": "로그인",
 		"loginWith": "아래 로그인 수단 중 하나로 계속하세요",
 		"withDaldalso": "달달소로 로그인",
-		"withNaver": "치지직으로 로그인",
+		"withNaver": "네이버로 로그인",
 		"withFacebook": "페이스북 아이디로 로그인",
 		"withGoogle": "Googleでログイン",
 		"withTwitter": "Twitterでログイン",
