--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -111,7 +111,7 @@
 		"title": "로그인",
 		"loginWith": "아래 로그인 수단 중 하나로 계속하세요",
 		"withDaldalso": "달달소로 로그인",
-		"withNaver": "치지직으로 로그인",
+		"withNaver": "네이버로 로그인",
 		"withFacebook": "페이스북 아이디로 로그인",
 		"withGoogle": "Google으로 로그인",
 		"withTwitter": "X로 로그인",
@@ -329,7 +329,7 @@
 		"modex14": "사전 등재 여부와 관련없이 자유롭게 단어를 입력합니다.",
 		"modex15": "수학 공식이나 문제 이미지를 보고 답을 맞춥니다.",
 		"modex16": "덧셈, 뺄셈, 곱셈 식을 더 많이 푸는 사람이 승리합니다.",
-		"modex17": "근본의 귀환! 오리진 쿵쿵따 점수체계가 적용됩니다. (퍼펙트 +40, 굿 +30, 일반 +10, 실패 -70)<br>한 자리로 시작하는 세 글자의 한국어 어휘로 잇습니다.<br>강아<u>지</u> → <u>지</u>렁<u>이</u> → <u>이</u>발소",
+		"modex17": "근본의 귀환! 오리진 쿵쿵따 점수체계가 적용됩니다. (퍼펙트 +40, 굿 +30, 일반 +10, 실패 -70)",
 		"modex18": "한자를 보고 뜻과 발음을 맞춥니다.<br>山 → 뫼 산",
 		"numRound": "라운드 수",
 		"roundTime": "라운드 시간",
@@ -387,6 +387,8 @@
 		"explSami": "세 글자 단어와 두 글자 단어를 번갈아가며 잇습니다.",
 		"optPower": "파워두음",
 		"explPower": "특수한 두음법칙을 적용합니다.",
+		"optPowerword": "파워단어",
+		"explPowerword": "특수한 단어만 사용할 수 있습니다.",
 		"optProhibit": "금지어",
 		"explProhibit": "판을 끝내게 한 단어를 사용할 수 없게 합니다.",
 		"optNo2": "2글자 금지",
@@ -512,6 +514,7 @@
 		"theme_CKR": "쿠키런",
 		"theme_DBP": "동방 프로젝트",
 		"theme_PKM": "포켓몬스터",
+		"theme_PWR": "파워 단어",
 		
 		"class_1": "명",
 		"class_2": "대명",
