Update source file ko_KR.json

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -132,7 +132,7 @@
 	},
 	"kkutu": {
 		"title": "플러스끄투",
-		"version": "3.3.1",
+		"version": "3.4",
 		
 		"meta_desc": "웹에서 즐기는 끝말잇기 온라인, 쿵쿵따, 수학퀴즈, 앞말잇기, 자음퀴즈, 모음퀴즈, 십자말풀이! 플러스끄투에서 모두 즐겨보세요.",
 		"meta_keys": "끄투,kkutu,끝말잇기,온라인,웹,쿵쿵따,영어끝말잇기,영어쿵쿵따,시리토리,끝말잇기사이트,자음퀴즈,초성퀴즈,자퀴,십자말풀이,가로세로,타자,타자연습,앞말잇기",
@@ -232,6 +232,13 @@
 		"error_459": "부적절한 닉네임입니다. (비속어가 포함된 닉네임)",
 		"error_500": "서버 점검 혹은 업데이트가 진행 중입니다.",
 		"error_555": "공사 중입니다! ㅠㅠ",
+
+		"error_outroom": "방 밖에서는 사용할 수 없는 명령어입니다.",
+		"error_wronground": "라운드 수가 잘못 설정됐습니다. (1~10)",
+		"error_wrongtime": "라운드 시간이 잘못 설정됐습니다. (3, 5, 10, 30, 60, 90, 120, 150)",
+		"error_wronglimit": "플레이어 수가 잘못 설정됐습니다. (2~25)",
+		"error_incomplete": "입력이 완료되지 않았습니다.",
+
 		"turnError_402": "첫 턴 한방 금지",
 		"turnError_403": "한방 단어",
 		"turnError_405": "외래어",
@@ -719,7 +726,11 @@
 		"cmd_wb": "(/wb <i>대상</i>) 대상의 귓속말을 무시합니다. 무시된 상태에서 이 명령어를 다시 사용하면 무시가 해제됩니다.",
 		"cmd_shut": "(/shut <i>대상</i>) 대상의 모든 대화를 차단합니다. 차단된 상태에서 이 명령어를 다시 사용하면 차단이 해제됩니다.",
 		"cmd_id": "(/id <i>대상</i>) 대상의 식별 번호를 얻습니다.",
-		
+		"cmd_tt": "(/tt <i>즐거운 끝말잇기~!</i>) 방의 제목을 변경합니다.",
+		"cmd_roompw": "(/pw <i>0909</i>) 방에 비밀번호를 설정합니다.",
+		"cmd_u": "(/u <i>4</i>) 방에 참여할 수 있는 최대 인원을 설정합니다.",
+		"cmd_t": "(/t <i>30</i>) 방의 라운드 시간을 정합니다.",
+		"cmd_rd": "(/rd <i>10</i>) 방의 라운드 수를 정합니다.",
 		"menu": "전체 메뉴",
 		"credit": "제작진",
 		"myId": "내 식별 번호: ",
@@ -737,9 +748,12 @@
 		"mute": "음소거",
 		"save": "저장",
 		"denyReq": "요청 거부",
+		"bgmOverrideClassic": "BGM URL",
 		"bgmOverride": "배경 음악 URL (MP3, OGG, WAV / 재접속시 반영)",
 		"overrideUrl": "URL 입력 (YouTube 미지원)",
+		"bgmQuality": "음질 높이기 (재접속시 반영)",
 		"splashOverride": "로딩 이미지 URL",
+		"splashOverrideClassic": "로딩 URL",
 		"overrideImgUrl": "URL 입력",
 		"effVol": "효과음 볼륨",
 		"bgmVol": "배경 음악 볼륨",
@@ -759,8 +773,15 @@
 		"nextPage": "다음",
 		"page": "페이지",
 		
+		"chatWarn": "로비에서의 친목성 채팅은 제재 대상입니다. 자유로운 채팅은 귓속말 또는 방을 생성하여 이용해주세요.",
+		"chatHottime": "🔥 19시부터 0시는 핫타임! 2배의 XP를 받아보세요.",
+		"addictionWarning1": "게임을 플레이한지 ",
+		"addictionWarning2": "시간이 지났습니다. 과도한 게임 이용은 일상생활에 지장을 줄 수 있습니다. 이 게임물은 전체이용가입니다.",
+
 		"attemptFriendAdd": "님의 친구 추가 요청을 받았습니다. 수락합니까?",
 		"friendEditMemo": "이 친구에 대한 메모를 설정합니다. (최고 50자)",
+		"friendMemo": "메모",
+		"friendServer": "서버",
 		"friendAddRes_ok": "님과 친구가 되었습니다.",
 		"friendAddRes_no": "님이 친구 추가 요청을 거절했습니다.",
 		"friendAddNotice": "친구 추가 요청을 보낼 사용자의 식별 번호를 입력하세요.\n식별 번호는 명령어 /id를 이용하여 구할 수 있습니다.",
