로케일 파일 작업

--- a/Server/lib/Web/lang/ko_KR.json
+++ b/Server/lib/Web/lang/ko_KR.json
@@ -233,6 +233,11 @@
 		"error_500": "서버 점검 혹은 업데이트가 진행 중입니다.",
 		"error_555": "공사 중입니다! ㅠㅠ",
 
+		"couponFail_400": "로그인 후 이용 가능합니다.",
+		"couponFail_404": "쿠폰이 존재하지 않습니다.",
+		"couponFail_406": "이미 사용한 쿠폰입니다.",
+		"couponFail_405": "이미 만료된 쿠폰입니다.",
+
 		"error_outroom": "방 밖에서는 사용할 수 없는 명령어입니다.",
 		"error_wronground": "라운드 수가 잘못 설정됐습니다. (1~10)",
 		"error_wrongtime": "라운드 시간이 잘못 설정됐습니다. (3, 5, 10, 30, 60, 90, 120, 150)",
